backend/.kubernetes/kubernetes.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: spellbook
  labels:
    elbv2.k8s.aws/pod-readiness-gate-inject: enabled
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: spellbook
  name: spellbook-api
  labels:
    app: spellbook-api
spec:
  selector:
    matchLabels:
      app: spellbook-api
  replicas: 3
  template:
    metadata:
      labels:
        app: spellbook-api
    spec:
      serviceAccountName: app-service-account
      containers:
        - name: spellbook-api-app
          image: 083767677168.dkr.ecr.us-east-2.amazonaws.com/spellbook-prod-ecr
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
              httpHeaders:
              - name: Host
                value: commanderspellbook.com
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            
          livenessProbe:
            httpGet:
              path: /
              port: 80
              httpHeaders:
              - name: Host
                value: commanderspellbook.com
            initialDelaySeconds: 40
            periodSeconds: 20
            timeoutSeconds: 5
---
# API Service
apiVersion: v1
kind: Service
metadata:
  name: spellbook-api-service
  namespace: spellbook
  labels:
    app: spellbook-api
    tier: web
spec:
  type: NodePort
  selector:
    app: spellbook-api
  ports:
    - port: 80
      targetPort: 80

---
# Ingress Load Balancer
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spellbook-ingress
  namespace: spellbook
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    ## SSL Settings
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}, {"HTTP":80}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-2:083767677168:certificate/e6f5834f-bd9a-4333-962a-8fe0857e84ea
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
spec:
  ingressClassName: alb
  rules:
    - host: "backend.commanderspellbook.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ssl-redirect
                port:
                  name: use-annotation
          - path: /
            pathType: Prefix
            backend:
              service:
                name: spellbook-api-service
                port:
                  number: 80
    - host: "frontend.commanderspellbook.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ssl-redirect
                port:
                  name: use-annotation
          - path: /
            pathType: Prefix
            backend:
              service:
                name: spellbook-client-service
                port:
                  number: 80
